<resources>
    <string name="app_name">VendingApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="login_to_configure_vending_machine">Inventory Management</string>
    <string name="email">Email</string>
    <string name="manage_products">Manage Products</string>
    <string name="exit">Exit</string>
    <string name="add_product">Add New Product</string>
    <string name="view">View</string>
    <string name="product_name">Product Name</string>
    <string name="sell_price">Sell Price</string>
    <string name="cost_price">Cost Price</string>
    <string name="slot_number">Slot Number</string>
    <string name="description">Description</string>
    <string name="max_quantity">Max Quantity</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="save_product">Save Product</string>
    <string name="products">Products</string>
    <string name="loading">Loading...</string>
    <string name="no_products_available">No Products Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="technical_setting">Technical Setting</string>
    <string name="go_to_shopping">Go to Shopping</string>
    <string name="shopping">Shopping</string>
    <string-array name="currency_symbols">
        <item>₹</item>
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>₩</item>
    </string-array>
</resources>