<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProductsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nudmotoya"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/add_product"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/dark_brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Product Image -->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/productImageView"
            app:layout_constraintTop_toBottomOf="@id/labelToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <!-- Choose Image Button -->
        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Image"
            app:backgroundTint="@null"
            android:background="@drawable/rectangle_solid_brown"
            android:fontFamily="@font/nudmotoya"
            app:layout_constraintTop_toBottomOf="@id/productImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Product Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutProductName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnChooseImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sell Price -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSellPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutProductName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSellPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sell_price"
                android:inputType="numberDecimal"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cost Price -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCostPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutSellPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCostPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost_price"
                android:inputType="numberDecimal"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Slot Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSlotNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutCostPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSlotNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/slot_number"
                android:inputType="number"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutSlotNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Max Quantity -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutMaxQuantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMaxQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_quantity"
                android:inputType="number"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Available Quantity -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutAvailableQuantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutMaxQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAvailableQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/available_quantity"
                android:inputType="number"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Submit Product Button -->
        <Button
            android:id="@+id/btnSubmitProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_solid_brown"
            android:fontFamily="@font/nudmotoya"
            android:padding="16dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/save_product"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/layoutAvailableQuantity"
            app:layout_constraintStart_toStartOf="@+id/layoutAvailableQuantity"
            app:layout_constraintTop_toBottomOf="@+id/layoutAvailableQuantity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
