<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.vmconfiguration.authentication.TechnicianLoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layoutDirection="ltr">


            <TextView
                android:id="@+id/labelEnterCardDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/nudmotoya"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/admin_login"
                android:textAllCaps="false"
                android:textColor="@color/dark_brown"
                app:layout_constraintBottom_toTopOf="@+id/containerEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nudmotoya"
                android:gravity="center"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/containerEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelEnterCardDetails" />

            <LinearLayout
                android:id="@+id/containerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/light_gray2"
                android:padding="@dimen/_3sdp"
                app:layout_constraintBottom_toTopOf="@+id/containerPassword"
                app:layout_constraintEnd_toEndOf="@+id/labelEnterCardDetails"
                app:layout_constraintStart_toStartOf="@+id/labelEnterCardDetails"
                app:layout_constraintTop_toBottomOf="@+id/labelEnterCardDetails">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/email_con" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:text="fillip@gmail.com" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nudmotoya"
                android:gravity="center"
                android:text="@string/password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerEmail" />

            <LinearLayout
                android:id="@+id/containerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/light_gray2"
                android:padding="@dimen/_3sdp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerEmail">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/email_con" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="Test@123" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rectangle_solid_brown"
                android:fontFamily="@font/nudmotoya"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/containerPassword"
                app:layout_constraintStart_toStartOf="@+id/containerPassword"
                app:layout_constraintTop_toBottomOf="@+id/containerPassword" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/dark_brown"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>